# CTNet-Neurodynamic

./: README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: CTNET_NEURONAL_MONOGRAPH.md
examples/: run_neurodynamic_demo.py
src/ctnet_neurodynamic/: __init__.py  audit.py  config.py  metrics.py  model.py  modules.py
tests/: test_ctnet_neurodynamic.py
