[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ctnet-neurodynamic"
version = "0.1.0"
description = "CTNet Neurodynamic reference implementation."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Gines Espin Flores" }]
dependencies = ["torch>=2.1"]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
